# UniShelf

./: .gitignore  PROFILING-PLAN.md  README.md  SEARCH_IMPLEMENTATION.md  compose.yaml  docker-compose.yml  env.example
.github/workflows/: deploy.yml
backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt  seed_db.py
backend/app/: auth.py  config.py  database.py  main.py  minio_client.py  models.py  schemas.py
backend/app/controllers/admin/: router.py
backend/app/controllers/auth/: helpers.py  router.py  schemas.py
backend/app/controllers/resources/: router.py  schemas.py
backend/app/controllers/tags/: router.py  schemas.py
backend/app/controllers/users/: router.py
backend/app/models/: __init__.py  associations.py  enums.py  resource.py  tag.py  user.py  visibility.py
backend/app/utils/: db_helpers.py  metrics.py  minio_client.py
docs/: Phase-2-Draft.md  Study Project-1.md  Study Project-2.md  Study Project-3.md  Study Project.md
frontend/: Dockerfile  entrypoint.sh  package-lock.json  package.json
frontend/app/: StoreProvider.tsx  globals.css  layout.tsx  page.tsx
frontend/app/(app)/: layout.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/auth/: auth-card.tsx
frontend/components/layout/: navbar.tsx
frontend/hooks/: useResources.ts
frontend/lib/: api.ts  apiUtils.ts  store.ts
frontend/types/: index.ts
nginx/: nginx.conf
prometheus/: prometheus.yml
unishelf/: Phase1_draft.md  Phase2.md  Study Project.md
uploads/: codex
(+15 files in other folders)
